tests/tests/macro/compile_error.stderr
error: specta: found string literal containing an unsupported inflection
 --> tests/macro/compile_error.rs:7:22
  |
7 | #[serde(rename_all = "camelCase123")]
  |                      ^^^^^^^^^^^^^^

error: specta: Found unsupported container attribute 'noshot'
  --> tests/macro/compile_error.rs:75:10
   |
75 | #[specta(noshot = true)]
   |          ^^^^^^

error: specta: Found unsupported container attribute 'noshot'
  --> tests/macro/compile_error.rs:79:10
   |
79 | #[specta(noshot)]
   |          ^^^^^^

error: specta: Found unsupported field attribute 'noshot'
  --> tests/macro/compile_error.rs:84:14
   |
84 |     #[specta(noshot = true)]
   |              ^^^^^^

error: specta: Found unsupported field attribute 'noshot'
  --> tests/macro/compile_error.rs:90:14
   |
90 |     #[specta(noshot)]
   |              ^^^^^^

error: #[specta(transparent)] is not allowed on an enum
  --> tests/macro/compile_error.rs:96:5
   |
96 | pub enum TransparentEnum {}
   |     ^^^^

error: specta: invalid formatted attribute
  --> tests/macro/compile_error.rs:99:3
   |
99 | #[specta]
   |   ^^^^^^

error: specta: invalid formatted attribute
   --> tests/macro/compile_error.rs:103:3
    |
103 | #[specta = "todo"]
    |   ^^^^^^

error[E0432]: unresolved import `specta::specta`
 --> tests/macro/compile_error.rs:3:14
  |
3 | use specta::{specta, Type};
  |              ^^^^^^ no `specta` in the root
  |
note: found an item that was configured out
 --> $WORKSPACE/specta/src/lib.rs
  |
  | pub use specta_macros::specta;
  |                        ^^^^^^
note: the item is gated here
 --> $WORKSPACE/specta/src/lib.rs
  |
  | #[cfg(all(feature = "derive", feature = "function"))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
   --> tests/macro/compile_error.rs:110:20
    |
110 | pub fn testing() {}
    |                    ^ consider adding a `main` function to `$DIR/tests/macro/compile_error.rs`
